loki-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-loki-ingress
  namespace: default  # or whatever namespace your loki-stack is in
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`loki.veljkoskrbic.com`)
      kind: Rule
      services:
        - name: loki-grafana  # This is the service name from the helm chart
          port: 80
