prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-grafana-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.veljkoskrbic.com`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
